# awesome-voice-ai-apps

./: .gitignore  README.md
.claude/: settings.local.json
apps/dictation-for-dental-hygienists/: .env.example  app.py  extraction_service.py  languages.py  pyproject.toml
apps/dictation-for-dental-hygienists/assets/: styles.css
apps/dictation_for_dental_hygienists/: README.md  azure_services.py  data_models.py  dental_chart.py
apps/dictation_for_dental_hygienists/assets/: audio_recorder.js
apps/mcdonalds-voice-menu/: docker-compose.yaml
apps/mcdonalds-voice-menu/backend/: pyproject.toml
apps/mcdonalds-voice-menu/backend/alembic/: env.py
apps/mcdonalds-voice-menu/backend/alembic/versions/: 0b4752c330a2_initial_menu_items_table.py  f8455d46f521_change_embeddings_dimension_from_1024_.py
apps/mcdonalds-voice-menu/backend/scripts/: seed_database.py
apps/mcdonalds-voice-menu/backend/src/: app.py  config.py  database.py  dto.py  schemas.py  session.py  settings.py
apps/mcdonalds-voice-menu/backend/src/mcdonalds_menu/: config.py  database.py  models.py
apps/mcdonalds-voice-menu/backend/src/routes/: audio.py  audio_ws.py  menu.py
apps/mcdonalds-voice-menu/backend/src/services/: azure_openai.py  azure_speech.py  embeddings.py  reranker.py  retrieval.py
apps/mcdonalds-voice-menu/backend/src/services/stt/: __init__.py  azure_provider.py  deepgram_provider.py
apps/mcdonalds-voice-menu/frontend/: index.html  package-lock.json  package.json
apps/psychotherapy_tracker/: .env.example  app.py  azure_services.py  data_models.py  languages.py  pyproject.toml  session_storage.py
apps/psychotherapy_tracker/assets/: audio_recorder.js  styles.css
apps/public-transport-voice/: README.md  app.py  azure_services.py
apps/public_transport_voice/: .env.example
backend/: .env.example  pyproject.toml
backend/data/: menu_items.json
backend/scripts/: seed_database.py
backend/src/: app.py  database.py  models.py  settings.py
backend/src/shared/: azure_openai.py  azure_stt.py  (+2 more)
frontend/public/: pcm-processor.js
frontend/src/: App.vue  style.css
public-transport-voice/: CLAUDE.md  languages.py  pyproject.toml
public-transport-voice/assets/: audio_recorder.js
(+68 files in other folders)
